--- a/express-basics/package.json
+++ b/express-basics/package.json
@@ -9,7 +9,10 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.1"
+		"express": "^4.18.1",
+		"pg": "^8.7.3",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.21.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
