--- a/express-basics/package.json
+++ b/express-basics/package.json
@@ -4,7 +4,7 @@
 	"description": "First project",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon app.js"
+		"start": "nodemon server.js"
 	},
 	"author": "",
 	"license": "ISC",
