--- a/security/package.json
+++ b/security/package.json
@@ -9,6 +9,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.2",
 		"pg": "^8.7.3",
@@ -16,6 +17,6 @@
 		"sequelize": "^6.21.0"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.16"
+		"nodemon": "^2.0.18"
 	}
 }
