--- a/security/package.json
+++ b/security/package.json
@@ -13,6 +13,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.2",
+		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.7.3",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.21.0"
