--- a/security/package.json
+++ b/security/package.json
@@ -12,6 +12,7 @@
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-rate-limit": "^6.4.0",
 		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.7.3",
