--- a/heroku-example/package.json
+++ b/heroku-example/package.json
@@ -20,8 +20,10 @@
 		"express-rate-limit": "^6.4.0",
 		"express-validator": "^6.14.2",
 		"helmet": "^5.1.0",
+		"html-to-text": "^8.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.7.7",
 		"pg": "^8.7.3",
 		"pg-hstore": "^2.3.4",
 		"pug": "^3.0.2",
