--- a/azure-example/package.json
+++ b/azure-example/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@azure/storage-blob": "^12.11.0",
 		"bcryptjs": "^2.4.3",
 		"compression": "^1.7.4",
 		"dotenv": "^16.0.1",
