--- a/fullstack-heroku/package.json
+++ b/fullstack-heroku/package.json
@@ -11,7 +11,11 @@
 		"install:server": "cd server && npm install",
 		"install:app": "npm-run-all install:server install:client",
 		"start:client": "npm start --prefix client",
-		"start:server": "npm run start:dev --prefix server"
+		"start:server": "npm run start:dev --prefix server",
+		"start:app": "npm-run-all --parallel start:server start:client",
+		"build:client": "npm run build --prefix client",
+		"start": "npm start --prefix server",
+		"heroku-postbuild": "npm-run-all install:app build:client"
 	},
 	"keywords": [],
 	"author": "",
